@@ -40,6 +40,11 @@ kotlin {
             implementation(compose.components.resources)
             implementation(compose.components.uiToolingPreview)
             implementation(libs.kotlinx.datetime)
+            implementation(libs.koin.core)
+            implementation(libs.koin.compose)
+            implementation(libs.precompose.koin)
+            implementation(libs.precompose.molecule)
+            implementation(libs.precompose.viewmodel)
         }
     }
 }
