@@ -10,11 +10,16 @@ androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
-compose = "1.6.2"
-compose-plugin = "1.6.0"
+compose = "1.6.3"
+compose-plugin = "1.6.1"
 junit = "4.13.2"
+koin-core = "3.5.3"
+koin-compose = "1.1.2"
 kotlin = "1.9.22"
 kotlinx-datetime = "0.5.0"
+precompose-koin = "1.5.11"
+precompose-molecule = "1.5.11"
+precompose-viewmodel = "1.5.11"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -29,7 +34,12 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-core" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
 kotlinx-datetime = {module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime"}
+precompose-koin = {module = "moe.tlaster:precompose-molecule", version.ref = "precompose-koin"}
+precompose-molecule = {module = "moe.tlaster:precompose-viewmodel", version.ref = "precompose-molecule"}
+precompose-viewmodel = {module = "moe.tlaster:precompose-koin", version.ref = "precompose-viewmodel"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
